Thu Sep  5 16:00:42 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* index.html: 
	Removed old and out-of-date documentation. Replaced by link to
	automatically generated html version of POD documentation
	within Checkbot.

	* checkbot:
	Fixed documentation bugs.
	Really fix the case insensitive comparison.

Sun Sep  1 20:31:46 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot (print_server_problems): 
	Make comparison for error message case insensitive.

Fri Aug 30 20:19:56 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: Fixed several typo's.

Wed Aug  7 10:06:29 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* checkbot (handle_doc): 
	The new LinkExtractor is nice, but I shouldn't treat its output as
	a hash when it is an array, and thus skipping every other link.

Mon Aug  5 08:46:24 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* checkbot (print_server): 
	Fixed silly bug in calculating the percentage of problems on each
	server.

Fri Aug  2 21:38:39 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: Added several patches by Bruce Speyer:
	Added -N note option to go along with -M, -z to suppress reporting
	errors on matching links.
	Added enough logic to catch gopher URLS if no gopher server found.
	Need further logic to parse gopher returned menu for bad file or
	directory.

	* checkbot: Made a good start with POD documentation inside the
	checkbot file. Try 'perldoc checkbot'.

	* TODO: Added number of suggestions by Luuk de Boer.

	* checkbot (send_mail): Include summary of links checked in message.

Fri Aug  2 13:01:02 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* checkbot: 
	Added check for correct LWP version. We now need 5.01, due to bugs
	in the handling of the BASE attribute in previous versions.

Sat Jul 27 21:13:26 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: 
	Added several patches by Bruce Speyer: