@@ -24,16 +24,19 @@ The latest Checkbot release is <a href="checkbot">Checkbot
 Read the <a href="ChangeLog.html">ChangeLog</a> and <a
 href="TODO">TODO</a> files for more information.
 
-Checkbot has the following requirements:
+Checkbot has the following software requirements:
 
 <ul>
   <li>perl 5.002
   <li><a
-      href="http://www.sn.no/libwww-perl/">LWP <b>5.01</b></a>.
+      href="http://www.sn.no/libwww-perl/">LWP <b>5.02</b></a>.
       (libwww-perl 5 module) 
+  <li>libnet-1.00 (required by LWP)
   <li>Mail::Send (optionally with option -M, available in Mailtools
       archive)
 </ul>
+
+All software can be found at <a href="http://www.perl.com/CPAN/">CPAN</a>.
 
 <h2>How does Checkbot work?</h2>
 
